# pipo

./: .dockerignore  .env.example  .gitignore  .secrets.example.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dockerfile-bake.hcl  fluentd.conf  groovy.py  main.py  pyproject.toml  run_loop.sh
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md  report-bug.md
.github/workflows/: build_documentation.yml  deploy_documentation.yml  docker.yml  python.yml  rebase_dependencies.yml
docs/: Makefile  conf.py  index.html  index.rst  make.bat  pipo.cogs.rst  pipo.command.rst  pipo.player.rst  pipo.rst  pipo.states.rst  requirements.txt
docs/github_pages/doctrees/: environment.pickle  index.doctree  pipo.cogs.doctree  pipo.command.doctree  pipo.doctree  pipo.player.doctree  pipo.states.doctree
docs/github_pages/html/: .buildinfo  genindex.html  index.html  objects.inv  pipo.cogs.html  pipo.command.html  pipo.html  pipo.player.html  pipo.states.html  py-modindex.html  search.html  searchindex.js
docs/github_pages/html/_modules/: index.html
docs/github_pages/html/_modules/pipo/: bot.html  pipo.html
docs/github_pages/html/_modules/pipo/cogs/: music_bot.html
docs/github_pages/html/_modules/pipo/command/: command.html  command_queue.html  pause.html  play.html  reboot.html  resume.html  skip.html
docs/github_pages/html/_modules/pipo/player/: player.html
docs/github_pages/html/_modules/pipo/states/: disconnected_state.html  idle_state.html  playing_state.html  state.html
docs/github_pages/html/_sources/: index.rst.txt
pipo/: .secrets.yaml  __init__.py  __main__.py  bot.py  bot_event.py  config.py  groovy.py  invoker.py  pipo.py  player.py  probes.py  settings.yaml  signal_manager.py
pipo/cogs/: __init__.py  music_bot.py
pipo/cogs/music_bot/: input_parser.py  music_bot.py
pipo/command/: __init__.py  clear.py  command.py  command_list.py  command_queue.py  join.py  leave.py  list_commands.py  pause.py  play.py  playlist.py  reboot.py  resume.py  shuffle.py  skip.py  skiplist.py  status.py  stop.py
pipo/music/: __init__.py  component.py  music.py  music_queue.py
pipo/music_queue/: local_music_queue.py  music_queue.py
pipo/player/: __init__.py  player.py  player_queue.py  player_queue_factory.py  player_queue_type.py  queue.py  queue_factory.py
pipo/player/audio_source/: base_handler.py  null_handler.py  source_factory.py  source_handler.py  source_oracle.py  source_pair.py  source_type.py  spotify_handler.py  youtube_handler.py  youtube_query_handler.py
pipo/player/audio_source/schemas/: spotify.py
pipo/player/music_queue/: _remote_music_queue.py  local.py  local_music_queue.py  music_queue.py  music_queue_factory.py  new_music_queue.py  queue_type.py  rabbitmq_music_queue.py
pipo/player/music_queue/amqp/: amqp_connector.py  amqp_music_queue.py
pipo/player/music_queue/local/: local_music_queue.py  music_queue.py
pipo/player/music_queue/models/: __init__.py  fetch.py  music.py  music_request.py  prefetch.py  provider.py
pipo/player/music_queue/remote/: __init__.py  _remote_music_queue.py  music_queue.py
pipo/states/: __init__.py  context.py  disconnected_state.py  idle_state.py  playing_state.py  state.py
tests/: conftest.py  constants.py
tests/e2e/: test_music_queue.py  test_player.py
tests/integration/: test_dispatch.py  test_music_cog.py  test_player.py  test_probes.py  test_transmute_spotify.py
tests/unit/: test_command_queue.py  test_local_music_queue.py  test_play_input_parser.py  test_player.py  test_pytest.py  test_remote_music_queue.py  test_suite.py
tests/unit/audio_source/: test_spotify.py  test_youtube.py  test_youtube_query.py
tests/unit/cogs/: test_play_input_parser.py
tests/unit/music_queue/: test_local_music_queue.py  test_remote_music_queue.py
tests/unit/states/: test_disconnected_state.py  test_idle_state.py  test_playing_state.py
