[tool.poetry]
name = "pipo"
version = "0.0.0" # managed from CI only
description = "Bot to play music in a discord channel"

license = "MIT"

authors = [
    "André Gonçalves <andrecg95@gmail.com>",
    "Tiago Gonçalves <tiago14_ribeiro@hotmail.com>",
    "Miguel Peixoto <miguel.peixoto.99@gmail.com>",
]

readme = 'README.md'

keywords = ['python', 'discord', 'music', 'bot']

classifiers = [
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Operating System :: OS Independent',
    'Natural Language :: English',
    'Topic :: Multimedia :: Sound/Audio',
    'Topic :: Multimedia :: Sound/Audio :: Players',
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31"
yt-dlp = "~2023.12.30"
discord-py = { version = "~2.3.0", extras = ["voice"] }
dynaconf = { version = "~3.2.0", extras = ["yaml"] }

[tool.poetry.dev-dependencies]
setuptools = "*"
sphinx = "~7.2.0"
numpydoc = "~1.6.0"
pytest = "^8.0"
mock = "~5.1.0"
pytest-mock = "~3.12.0"
pytest-asyncio = "~0.23.0"
pytest-cov = "~4.1.0"
types-mock = "^5.0.0"
dpytest = "0.7.0"
flaky = "~3.8.1"
ruff = "0.3.3"
black = "24.3.0"
vulture = "2.11"

[tool.poetry.scripts]
pipo = "pipo.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
mock_use_standalone_module = true
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ['pipo']
[tool.coverage.report]
fail_under = 65
omit = [
    '*__init__.py',
    '*__main__.py',
]

[tool.ruff]
extend-exclude = [
    "tests",
    "*__main__.py",
    "*__init__.py",
]
line-length = 88

[tool.ruff.lint]
select = [
    "E",        #pycodestyle error
    "W",        #pycodestyle warning
    "D",        #pydocstyle
    "F",        #pyflakes
    "I",        #isort
    "B",        #bugbear
    "S",        #bandit
    "N",        #pep8-naming
    "G",        #flake8-logging-format
    "PL",       #pylint
    "FLY",      #flynt
    "TRY",      #tryceratops
    "TCH",      #flake8-type-checking
    "C90",      #McCabe complexity
    "ASYNC",    #flake8-async
    "PERF",     #perflint
]
ignore = [
    "D100", # missing docstring in public module
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
paths = ["pipo/"]
make_whitelist = true
min_confidence = 70
sort_by_size = true
